# skellymodels

./: README.md  main.py  pyproject.toml
docs/: architecture.md  configuration.md  kinematics.md  migration.md  ontology.md  pipeline.md
eh-skellymodels/: __init__.py
eh-skellymodels/core/: timeseries.py
eh-skellymodels/tests/: conftest.py  test_end_to_end.py  test_skeleton_definition.py  test_trajectory.py
notes/: 2026-04-14-refactor-plan.md  model-heirarchy-notes.md
old-skellymodels/biomechanics/: anatomical_calculations.py
old-skellymodels/bvh_exporter/: actor_bvh_extension.py  advanced_bvh_rotation.py
old-skellymodels/from_blender/: generic_types.py  mediapipe_mapping.py  mediapipe_point_names.py  procrustes_points_alignment.py  tracker_source_types.py
old-skellymodels/models/: anatomical_structure.py  aspect.py  trajectory.py
old-skellymodels/utils/: types.py
skellymodels/: __init__.py  __main__.py  chain.py  keypoint.py  linkage.py  mapping.py  segments.py  skeleton.py  type_aliases.py
skellymodels/biomechanics/: anatomical_calculations.py  com_definition.py  com_loader.py  pipeline.py
skellymodels/bvh_exporter/: bvh_exporter.py
skellymodels/core/: dot_access.py
skellymodels/from_blender/: base_enums.py  data_component_types.py  freemocap_skeleton_data.py  orthonormal_basis_3d.py  rigid_body_definition_class.py  tracked_points_classes.py  type_safe_dataclass.py
skellymodels/kinematics/: bridge.py
skellymodels/mapping/: __init__.py  keypoint_mapping.py  mapping_loader.py
skellymodels/models/: __init__.py  anatomical_structure.py  (+4 more)
(+90 files in other folders)
